--- a/shop/templates/shop/contact.html
+++ b/shop/templates/shop/contact.html
@@ -16,20 +16,24 @@
 {% endblock %}
 {% block body %}
 {% if flag == 1 %}
+<div class="container mt-4 mb-2">
 <div class="alert alert-success alert-dismissible fade show" role="alert">
     {{message}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
+</div>
 {% endif %}
 
 {% if flag == 2 %}
+<div class="container mt-4 mb-2">
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
     {{message}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
+</div>
 </div>
 {% endif %}
 
