Invoice has been created For the Order Which are placed

--- a/shop/templates/shop/tracker.html
+++ b/shop/templates/shop/tracker.html
@@ -66,6 +66,7 @@
             </ul>
         </div>
         {% endif %}
+        <div class="col-4"><a href="{{invoice.pdf.url}}">ClickHere</a> to Download Invoice</div>
 
 </div>
 
